--- a/data-analyst.html
+++ b/data-analyst.html
@@ -75,7 +75,7 @@
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KABS/743999697991212-analyste-verification-de-donnees-data-review-analyst'>KABS Analyste V?rification de donn?es - Data Review Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KABS/743999697991212-analyste-verification-de-donnees-data-review-analyst'>KABS Analyste V?rification de donn?es - Data Review Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -95,7 +95,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://towerswatson.referrals.selectminds.com/jobs/data-analyst-engineer-12016'>Data Analyst/Engineer - Willis Towers Watson Careers</a></h5> 
+<h5><a href='https://towerswatson.referrals.selectminds.com/jobs/data-analyst-engineer-12016'>Data Analyst/Engineer - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -131,7 +131,7 @@
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LuminousTechnologyGroup/743999698393161-data-analyst'>Luminous Technology Group Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LuminousTechnologyGroup/743999698393161-data-analyst'>Luminous Technology Group Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -175,7 +175,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gradschool.umd.edu/education/edms'>Measurement, Statistics and Evaluation | The University of Maryland Graduate School</a></h5> 
+<h5><a href='https://gradschool.umd.edu/education/edms'>Measurement, Statistics and Evaluation | The University of Maryland Graduate School</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -239,7 +239,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698307417-vice-president-director-data-analysis'>Publicis Groupe Vice President Director, Data & Analysis | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698307417-vice-president-director-data-analysis'>Publicis Groupe Vice President Director, Data & Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -257,7 +257,7 @@
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oDwkbfwo&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n9YImMws'>Freedom Financial Network Careers - Sr. Data Analyst (3 Positions Available)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oDwkbfwo&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n9YImMws'>Freedom Financial Network Careers - Sr. Data Analyst (3 Positions Available)</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -303,7 +303,7 @@
 <p><span class="badge badge-light">Toronto, ON  Toronto, ON</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/datacom.co.nz/c00c156b-b7e5-4db1-b8b4-fb5e0d8e0493'>Datacom - Service Desk Analyst - Fixed Term</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/c00c156b-b7e5-4db1-b8b4-fb5e0d8e0493'>Datacom - Service Desk Analyst - Fixed Term</a></h5> 
 <p><span class="badge badge-light">Adelaide</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -327,7 +327,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435765002'>Job Application for Data Analyst, Data Science & Analytics at QuestBridge</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435765002'>Job Application for Data Analyst, Data Science & Analytics at QuestBridge</a></h5> 
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -356,7 +356,7 @@
 <p>1 day ago ... We are looking for a talented Data Analyst to join gov.au Observatory, to help us 
 achieve our mission to quantify user interactions with government services.</p>
 <hr/>
-<h5><a href='https://tiaa.referrals.selectminds.com/jobs/datastage-systems-analyst-2942'>DataStage Systems Analyst - TIAA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tiaa.referrals.selectminds.com/jobs/datastage-systems-analyst-2942'>DataStage Systems Analyst - TIAA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -378,7 +378,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://opentextats.avature.net/careers/JobDetail/Southfield-Michigan-United-States-Senior-Data-Integration-Analyst/26369'>Senior Data Integration Analyst - US, MI, Southfield - 26369</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opentextats.avature.net/careers/JobDetail/Southfield-Michigan-United-States-Senior-Data-Integration-Analyst/26369'>Senior Data Integration Analyst - US, MI, Southfield - 26369</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -386,7 +386,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GeneraGames1/743999698013625-data-analyst'>Genera Games Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GeneraGames1/743999698013625-data-analyst'>Genera Games Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -455,11 +455,11 @@ organization?...</p>
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://mdanderson.referrals.selectminds.com/jobs/data-management-analyst-faculty-academic-affairs-23181'>Data Management Analyst - Faculty Academic Affairs - MD Anderson Cancer Center Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mdanderson.referrals.selectminds.com/jobs/data-management-analyst-faculty-academic-affairs-23181'>Data Management Analyst - Faculty Academic Affairs - MD Anderson Cancer Center Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://translations.recruitee.com/l/fr/o/language-data-analyst-spanish-and-english-speakers'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://translations.recruitee.com/l/fr/o/language-data-analyst-spanish-and-english-speakers'>
       Language Data Analyst - Spanish and English Speakers - TransPerfect
     </a></h5> 
 <p><span class="badge badge-light">Tempe, ?tats-Unis</span></p>
@@ -491,7 +491,7 @@ organization?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://ibxhome.referrals.selectminds.com/jobs/medical-data-analyst-2640'>Medical Data Analyst - Independence Blue Cross Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ibxhome.referrals.selectminds.com/jobs/medical-data-analyst-2640'>Medical Data Analyst - Independence Blue Cross Careers</a></h5> 
 <p><span class="badge badge-light">Philadelphia, Pennsylvania</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
